# slide-extractor

./: .gitignore  LICENSE  NOTICE  README.md  install.sh  pyproject.toml  requirements.txt  slide_extractor.py  slide_review.py  slide_web.py
docs/: algorithm.md
examples/: usage.md
specs/: constitution.md
specs/001-extract-slides/: audit.md  plan.md  spec.md  tasks.md
tests/: smoke_web.py  test_extractor.py
